--- a/webapp/rest-juneau/WEB-INF/web.xml
+++ b/webapp/rest-juneau/WEB-INF/web.xml
@@ -21,13 +21,25 @@ under the License.
 <web-app version="4.0" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
     <display-name>Apache OFBiz - Rest-juneau Component</display-name>
     <description>Rest-juneau Component of the Apache OFBiz Project</description>
-
+    <context-param>
+        <description>A unique name used to identify/recognize the local dispatcher for the Service Engine</description>
+        <param-name>localDispatcherName</param-name><param-value>rest-juneau</param-value>
+    </context-param>
+    <context-param>
+        <description>The Name of the Entity Delegator to use, defined in entityengine.xml</description>
+        <param-name>entityDelegatorName</param-name><param-value>default</param-value>
+    </context-param> 
     <servlet>
          <servlet-name>HelloWorldResource</servlet-name>
-         <servlet-class>org.apache.ofbiz.juneau.resource.HelloWorldJuneau</servlet-class>
+         <servlet-class>org.apache.ofbiz.juneau.resource.RootResource</servlet-class>
     </servlet>
     <servlet-mapping>
          <servlet-name>HelloWorldResource</servlet-name>
          <url-pattern>/*</url-pattern>
     </servlet-mapping>
+    <listener>
+		<listener-class>
+			org.apache.ofbiz.jersey.listerner.AppServletContextListener
+		</listener-class>
+	</listener>
 </web-app>
